[gd_scene load_steps=12 format=3 uid="uid://cbhbsovvqv17g"]

[ext_resource type="Script" path="res://main.gd" id="1_shqa8"]
[ext_resource type="PackedScene" uid="uid://c3tsj55u4ltou" path="res://player.tscn" id="1_xec12"]
[ext_resource type="Texture2D" uid="uid://c58yelcbi1dnv" path="res://assets/grass.png" id="2_lfuv4"]
[ext_resource type="PackedScene" uid="uid://cahor3u6a8sfv" path="res://coin.tscn" id="2_n4nwm"]
[ext_resource type="PackedScene" uid="uid://cs816mbc86ehw" path="res://powerup.tscn" id="3_6h61e"]
[ext_resource type="PackedScene" uid="uid://hf3a50rltrkn" path="res://cactus.tscn" id="4_ayjrb"]
[ext_resource type="PackedScene" uid="uid://yodq12a8dsu7" path="res://hud.tscn" id="5_n632n"]
[ext_resource type="AudioStream" uid="uid://6u7s2lq77v7m" path="res://assets/audio/Coin.wav" id="6_8h05t"]
[ext_resource type="AudioStream" uid="uid://di3bohphk70so" path="res://assets/audio/Level.wav" id="7_eq4cx"]
[ext_resource type="AudioStream" uid="uid://4sfy6kafrlnl" path="res://assets/audio/EndSound.wav" id="8_rw115"]
[ext_resource type="AudioStream" uid="uid://chfetvroi6y1h" path="res://assets/audio/Powerup.wav" id="9_wskdn"]

[node name="Main" type="Node"]
script = ExtResource("1_shqa8")
coin_scene = ExtResource("2_n4nwm")
powerup_scene = ExtResource("3_6h61e")
cactus_scene = ExtResource("4_ayjrb")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lfuv4")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("1_xec12")]

[node name="GameTimer" type="Timer" parent="."]

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource("5_n632n")]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8h05t")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_eq4cx")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_rw115")

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_wskdn")

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
